exports[`no-unnecessary-fetch-options > invalid(1): fetch(\"/\", {method: (\"GET\" as const)}) 1`] = `

  1 | fetch("/", {method: ("GET" as const)})

`;

exports[`no-unnecessary-fetch-options > invalid(1): fetch(\"/\", {method: (\"GET\" as const)}) 2`] = `

Message:
> 1 | fetch("/", {method: ("GET" as const)})
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(1): fetch(url, {}) 1`] = `

  1 | fetch(url, {})

`;

exports[`no-unnecessary-fetch-options > invalid(1): fetch(url, {}) 2`] = `

Message:
> 1 | fetch(url, {})
    |            ^^ Remove unnecessary empty fetch options.

Output:
  1 | fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(10): fetch(\"/\", {\"method\": \"GET\"}) 1`] = `

  1 | fetch("/", {"method": "GET"})

`;

exports[`no-unnecessary-fetch-options > invalid(10): fetch(\"/\", {\"method\": \"GET\"}) 2`] = `

Message:
> 1 | fetch("/", {"method": "GET"})
    |             ^^^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(10): fetch(\"/\", {body: void {key: 1}}) 1`] = `

  1 | fetch("/", {body: void {key: 1}})

`;

exports[`no-unnecessary-fetch-options > invalid(10): fetch(\"/\", {body: void {key: 1}}) 2`] = `

Message:
> 1 | fetch("/", {body: void {key: 1}})
    |             ^^^^ Remove unnecessary \`body\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(11): fetch(\"/\", {[\"method\"]: \"GET\"}) 1`] = `

  1 | fetch("/", {["method"]: "GET"})

`;

exports[`no-unnecessary-fetch-options > invalid(11): fetch(\"/\", {[\"method\"]: \"GET\"}) 2`] = `

Message:
> 1 | fetch("/", {["method"]: "GET"})
    |              ^^^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(11): fetch(\"/\", {signal: signal<string>}); const signal = undefined; 1`] = `

  1 | fetch("/", {signal: signal<string>}); const signal = undefined;

`;

exports[`no-unnecessary-fetch-options > invalid(11): fetch(\"/\", {signal: signal<string>}); const signal = undefined; 2`] = `

Message:
> 1 | fetch("/", {signal: signal<string>}); const signal = undefined;
    |             ^^^^^^ Remove unnecessary \`signal\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(12): const signal = undefined; fetch(\"/\", {signal: signal<string>}); 1`] = `

  1 | const signal = undefined; fetch("/", {signal: signal<string>});

`;

exports[`no-unnecessary-fetch-options > invalid(12): const signal = undefined; fetch(\"/\", {signal: signal<string>}); 2`] = `

Message:
> 1 | const signal = undefined; fetch("/", {signal: signal<string>});
    |                                       ^^^^^^ Remove unnecessary \`signal\` fetch option.

Output:
  1 | const signal = undefined; fetch("/");

`;

exports[`no-unnecessary-fetch-options > invalid(12): fetch(\"/\", {method: \"GET\", \"\": value}) 1`] = `

  1 | fetch("/", {method: "GET", "": value})

`;

exports[`no-unnecessary-fetch-options > invalid(12): fetch(\"/\", {method: \"GET\", \"\": value}) 2`] = `

Message:
> 1 | fetch("/", {method: "GET", "": value})
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/", {"": value})

`;

exports[`no-unnecessary-fetch-options > invalid(13): fetch(\"/\", {headers: {\"x-custom\": \"value\"}, method: \"GET\"}) 1`] = `

  1 | fetch("/", {headers: {"x-custom": "value"}, method: "GET"})

`;

exports[`no-unnecessary-fetch-options > invalid(13): fetch(\"/\", {headers: {\"x-custom\": \"value\"}, method: \"GET\"}) 2`] = `

Message:
> 1 | fetch("/", {headers: {"x-custom": "value"}, method: "GET"})
    |                                             ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/", {headers: {"x-custom": "value"}})

`;

exports[`no-unnecessary-fetch-options > invalid(14): fetch(\"/\", {method}); const method = \"GET\"; 1`] = `

  1 | fetch("/", {method}); const method = "GET";

`;

exports[`no-unnecessary-fetch-options > invalid(14): fetch(\"/\", {method}); const method = \"GET\"; 2`] = `

Message:
> 1 | fetch("/", {method}); const method = "GET";
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(15): fetch(\"/\", {mode: \"cors\"}) 1`] = `

  1 | fetch("/", {mode: "cors"})

`;

exports[`no-unnecessary-fetch-options > invalid(15): fetch(\"/\", {mode: \"cors\"}) 2`] = `

Message:
> 1 | fetch("/", {mode: "cors"})
    |             ^^^^ Remove unnecessary \`mode\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(16): new Request(\"/\", {credentials: \"same-origin\"}) 1`] = `

  1 | new Request("/", {credentials: "same-origin"})

`;

exports[`no-unnecessary-fetch-options > invalid(16): new Request(\"/\", {credentials: \"same-origin\"}) 2`] = `

Message:
> 1 | new Request("/", {credentials: "same-origin"})
    |                   ^^^^^^^^^^^ Remove unnecessary \`credentials\` fetch option.

Output:
  1 | new Request("/")

`;

exports[`no-unnecessary-fetch-options > invalid(17): fetch(\"/\", {credentials: \"same-origin\"}) 1`] = `

  1 | fetch("/", {credentials: "same-origin"})

`;

exports[`no-unnecessary-fetch-options > invalid(17): fetch(\"/\", {credentials: \"same-origin\"}) 2`] = `

Message:
> 1 | fetch("/", {credentials: "same-origin"})
    |             ^^^^^^^^^^^ Remove unnecessary \`credentials\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(18): fetch(\"/\", {cache: \"default\"}) 1`] = `

  1 | fetch("/", {cache: "default"})

`;

exports[`no-unnecessary-fetch-options > invalid(18): fetch(\"/\", {cache: \"default\"}) 2`] = `

Message:
> 1 | fetch("/", {cache: "default"})
    |             ^^^^^ Remove unnecessary \`cache\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(19): fetch(\"/\", {redirect: \"follow\"}) 1`] = `

  1 | fetch("/", {redirect: "follow"})

`;

exports[`no-unnecessary-fetch-options > invalid(19): fetch(\"/\", {redirect: \"follow\"}) 2`] = `

Message:
> 1 | fetch("/", {redirect: "follow"})
    |             ^^^^^^^^ Remove unnecessary \`redirect\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(2): fetch(\"/\", {method: (<const>\"GET\")}) 1`] = `

  1 | fetch("/", {method: (<const>"GET")})

`;

exports[`no-unnecessary-fetch-options > invalid(2): fetch(\"/\", {method: (<const>\"GET\")}) 2`] = `

Message:
> 1 | fetch("/", {method: (<const>"GET")})
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(2): fetch(url, {},) 1`] = `

  1 | fetch(url, {},)

`;

exports[`no-unnecessary-fetch-options > invalid(2): fetch(url, {},) 2`] = `

Message:
> 1 | fetch(url, {},)
    |            ^^ Remove unnecessary empty fetch options.

Output:
  1 | fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(20): fetch(\"/\", {referrer: \"about:client\"}) 1`] = `

  1 | fetch("/", {referrer: "about:client"})

`;

exports[`no-unnecessary-fetch-options > invalid(20): fetch(\"/\", {referrer: \"about:client\"}) 2`] = `

Message:
> 1 | fetch("/", {referrer: "about:client"})
    |             ^^^^^^^^ Remove unnecessary \`referrer\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(21): fetch(\"/\", {referrerPolicy: \"\"}) 1`] = `

  1 | fetch("/", {referrerPolicy: ""})

`;

exports[`no-unnecessary-fetch-options > invalid(21): fetch(\"/\", {referrerPolicy: \"\"}) 2`] = `

Message:
> 1 | fetch("/", {referrerPolicy: ""})
    |             ^^^^^^^^^^^^^^ Remove unnecessary \`referrerPolicy\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(22): fetch(\"/\", {integrity: \"\"}) 1`] = `

  1 | fetch("/", {integrity: ""})

`;

exports[`no-unnecessary-fetch-options > invalid(22): fetch(\"/\", {integrity: \"\"}) 2`] = `

Message:
> 1 | fetch("/", {integrity: ""})
    |             ^^^^^^^^^ Remove unnecessary \`integrity\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(23): fetch(\"/\", {keepalive: false}) 1`] = `

  1 | fetch("/", {keepalive: false})

`;

exports[`no-unnecessary-fetch-options > invalid(23): fetch(\"/\", {keepalive: false}) 2`] = `

Message:
> 1 | fetch("/", {keepalive: false})
    |             ^^^^^^^^^ Remove unnecessary \`keepalive\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(24): fetch(\"/\", {headers: {}}) 1`] = `

  1 | fetch("/", {headers: {}})

`;

exports[`no-unnecessary-fetch-options > invalid(24): fetch(\"/\", {headers: {}}) 2`] = `

Message:
> 1 | fetch("/", {headers: {}})
    |             ^^^^^^^ Remove unnecessary \`headers\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(25): fetch(\"/\", {headers: []}) 1`] = `

  1 | fetch("/", {headers: []})

`;

exports[`no-unnecessary-fetch-options > invalid(25): fetch(\"/\", {headers: []}) 2`] = `

Message:
> 1 | fetch("/", {headers: []})
    |             ^^^^^^^ Remove unnecessary \`headers\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(26): new Request(\"/\", {headers: []}) 1`] = `

  1 | new Request("/", {headers: []})

`;

exports[`no-unnecessary-fetch-options > invalid(26): new Request(\"/\", {headers: []}) 2`] = `

Message:
> 1 | new Request("/", {headers: []})
    |                   ^^^^^^^ Remove unnecessary \`headers\` fetch option.

Output:
  1 | new Request("/")

`;

exports[`no-unnecessary-fetch-options > invalid(27): fetch(\"/\", {headers: new Headers()}) 1`] = `

  1 | fetch("/", {headers: new Headers()})

`;

exports[`no-unnecessary-fetch-options > invalid(27): fetch(\"/\", {headers: new Headers()}) 2`] = `

Message:
> 1 | fetch("/", {headers: new Headers()})
    |             ^^^^^^^ Remove unnecessary \`headers\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(28): fetch(url, {method: undefined}) 1`] = `

  1 | fetch(url, {method: undefined})

`;

exports[`no-unnecessary-fetch-options > invalid(28): fetch(url, {method: undefined}) 2`] = `

Message:
> 1 | fetch(url, {method: undefined})
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(29): const signal = undefined; fetch(url, {signal}) 1`] = `

  1 | const signal = undefined; fetch(url, {signal})

`;

exports[`no-unnecessary-fetch-options > invalid(29): const signal = undefined; fetch(url, {signal}) 2`] = `

Message:
> 1 | const signal = undefined; fetch(url, {signal})
    |                                       ^^^^^^ Remove unnecessary \`signal\` fetch option.

Output:
  1 | const signal = undefined; fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(3): fetch(\"/\", {method: (\"GET\" satisfies string)}) 1`] = `

  1 | fetch("/", {method: ("GET" satisfies string)})

`;

exports[`no-unnecessary-fetch-options > invalid(3): fetch(\"/\", {method: (\"GET\" satisfies string)}) 2`] = `

Message:
> 1 | fetch("/", {method: ("GET" satisfies string)})
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(3): new Request(url, {}) 1`] = `

  1 | new Request(url, {})

`;

exports[`no-unnecessary-fetch-options > invalid(3): new Request(url, {}) 2`] = `

Message:
> 1 | new Request(url, {})
    |                  ^^ Remove unnecessary empty fetch options.

Output:
  1 | new Request(url)

`;

exports[`no-unnecessary-fetch-options > invalid(30): fetch(\"/\", {signal}); const signal = undefined; 1`] = `

  1 | fetch("/", {signal}); const signal = undefined;

`;

exports[`no-unnecessary-fetch-options > invalid(30): fetch(\"/\", {signal}); const signal = undefined; 2`] = `

Message:
> 1 | fetch("/", {signal}); const signal = undefined;
    |             ^^^^^^ Remove unnecessary \`signal\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(31): fetch(url, {headers: undefined}) 1`] = `

  1 | fetch(url, {headers: undefined})

`;

exports[`no-unnecessary-fetch-options > invalid(31): fetch(url, {headers: undefined}) 2`] = `

Message:
> 1 | fetch(url, {headers: undefined})
    |             ^^^^^^^ Remove unnecessary \`headers\` fetch option.

Output:
  1 | fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(32): fetch(url, {signal: undefined}) 1`] = `

  1 | fetch(url, {signal: undefined})

`;

exports[`no-unnecessary-fetch-options > invalid(32): fetch(url, {signal: undefined}) 2`] = `

Message:
> 1 | fetch(url, {signal: undefined})
    |             ^^^^^^ Remove unnecessary \`signal\` fetch option.

Output:
  1 | fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(33): fetch(url, {duplex: undefined}) 1`] = `

  1 | fetch(url, {duplex: undefined})

`;

exports[`no-unnecessary-fetch-options > invalid(33): fetch(url, {duplex: undefined}) 2`] = `

Message:
> 1 | fetch(url, {duplex: undefined})
    |             ^^^^^^ Remove unnecessary \`duplex\` fetch option.

Output:
  1 | fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(34): fetch(url, {priority: undefined}) 1`] = `

  1 | fetch(url, {priority: undefined})

`;

exports[`no-unnecessary-fetch-options > invalid(34): fetch(url, {priority: undefined}) 2`] = `

Message:
> 1 | fetch(url, {priority: undefined})
    |             ^^^^^^^^ Remove unnecessary \`priority\` fetch option.

Output:
  1 | fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(35): fetch(url, {window: undefined}) 1`] = `

  1 | fetch(url, {window: undefined})

`;

exports[`no-unnecessary-fetch-options > invalid(35): fetch(url, {window: undefined}) 2`] = `

Message:
> 1 | fetch(url, {window: undefined})
    |             ^^^^^^ Remove unnecessary \`window\` fetch option.

Output:
  1 | fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(36): fetch(url, {body: null}) 1`] = `

  1 | fetch(url, {body: null})

`;

exports[`no-unnecessary-fetch-options > invalid(36): fetch(url, {body: null}) 2`] = `

Message:
> 1 | fetch(url, {body: null})
    |             ^^^^ Remove unnecessary \`body\` fetch option.

Output:
  1 | fetch(url)

`;

exports[`no-unnecessary-fetch-options > invalid(37): fetch(\"/\", {body: null},) 1`] = `

  1 | fetch("/", {body: null},)

`;

exports[`no-unnecessary-fetch-options > invalid(37): fetch(\"/\", {body: null},) 2`] = `

Message:
> 1 | fetch("/", {body: null},)
    |             ^^^^ Remove unnecessary \`body\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(38): new Request(url, {body: null}) 1`] = `

  1 | new Request(url, {body: null})

`;

exports[`no-unnecessary-fetch-options > invalid(38): new Request(url, {body: null}) 2`] = `

Message:
> 1 | new Request(url, {body: null})
    |                   ^^^^ Remove unnecessary \`body\` fetch option.

Output:
  1 | new Request(url)

`;

exports[`no-unnecessary-fetch-options > invalid(39): fetch(request, {method: undefined}) 1`] = `

  1 | fetch(request, {method: undefined})

`;

exports[`no-unnecessary-fetch-options > invalid(39): fetch(request, {method: undefined}) 2`] = `

Message:
> 1 | fetch(request, {method: undefined})
    |                 ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch(request)

`;

exports[`no-unnecessary-fetch-options > invalid(4): fetch(\"/\", {method: (\"GET\"!)}) 1`] = `

  1 | fetch("/", {method: ("GET"!)})

`;

exports[`no-unnecessary-fetch-options > invalid(4): fetch(\"/\", {method: (\"GET\"!)}) 2`] = `

Message:
> 1 | fetch("/", {method: ("GET"!)})
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(4): fetch(\"https://example.com\", {method: \"GET\"}) 1`] = `

  1 | fetch("https://example.com", {method: "GET"})

`;

exports[`no-unnecessary-fetch-options > invalid(4): fetch(\"https://example.com\", {method: \"GET\"}) 2`] = `

Message:
> 1 | fetch("https://example.com", {method: "GET"})
    |                               ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("https://example.com")

`;

exports[`no-unnecessary-fetch-options > invalid(40): fetch(request, {body: null}) 1`] = `

  1 | fetch(request, {body: null})

`;

exports[`no-unnecessary-fetch-options > invalid(40): fetch(request, {body: null}) 2`] = `

Message:
> 1 | fetch(request, {body: null})
    |                 ^^^^ Remove unnecessary \`body\` fetch option.

Output:
  1 | fetch(request)

`;

exports[`no-unnecessary-fetch-options > invalid(41): fetch(\"/\", {method: \"GET\"}, extraArgument) 1`] = `

  1 | fetch("/", {method: "GET"}, extraArgument)

`;

exports[`no-unnecessary-fetch-options > invalid(41): fetch(\"/\", {method: \"GET\"}, extraArgument) 2`] = `

Message:
> 1 | fetch("/", {method: "GET"}, extraArgument)
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/", {}, extraArgument)

`;

exports[`no-unnecessary-fetch-options > invalid(42): fetch(url, /* keep */ {}) 1`] = `

  1 | fetch(url, /* keep */ {})

`;

exports[`no-unnecessary-fetch-options > invalid(42): fetch(url, /* keep */ {}) 2`] = `

Message:
> 1 | fetch(url, /* keep */ {})
    |                       ^^ Remove unnecessary empty fetch options.

`;

exports[`no-unnecessary-fetch-options > invalid(43): fetch(url, {/* keep */}) 1`] = `

  1 | fetch(url, {/* keep */})

`;

exports[`no-unnecessary-fetch-options > invalid(43): fetch(url, {/* keep */}) 2`] = `

Message:
> 1 | fetch(url, {/* keep */})
    |            ^^^^^^^^^^^^ Remove unnecessary empty fetch options.

`;

exports[`no-unnecessary-fetch-options > invalid(44): fetch(url, {}, /* keep */) 1`] = `

  1 | fetch(url, {}, /* keep */)

`;

exports[`no-unnecessary-fetch-options > invalid(44): fetch(url, {}, /* keep */) 2`] = `

Message:
> 1 | fetch(url, {}, /* keep */)
    |            ^^ Remove unnecessary empty fetch options.

`;

exports[`no-unnecessary-fetch-options > invalid(45): fetch(\"/\", {method: \"GET\"} /* keep */) 1`] = `

  1 | fetch("/", {method: "GET"} /* keep */)

`;

exports[`no-unnecessary-fetch-options > invalid(45): fetch(\"/\", {method: \"GET\"} /* keep */) 2`] = `

Message:
> 1 | fetch("/", {method: "GET"} /* keep */)
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(46): fetch('/', {\n\tmethod: 'GET',\n\theaders: {\n\t\taccept: 'application/json',\n\t},\n}); 1`] = `

  1 | fetch('/', {
  2 | 	method: 'GET',
  3 | 	headers: {
  4 | 		accept: 'application/json',
  5 | 	},
  6 | });

`;

exports[`no-unnecessary-fetch-options > invalid(46): fetch('/', {\n\tmethod: 'GET',\n\theaders: {\n\t\taccept: 'application/json',\n\t},\n}); 2`] = `

Message:
  1 | fetch('/', {
> 2 | 	method: 'GET',
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.
  3 | 	headers: {
  4 | 		accept: 'application/json',
  5 | 	},
  6 | });

Output:
  1 | fetch('/', {
  2 | 	headers: {
  3 | 		accept: 'application/json',
  4 | 	},
  5 | });

`;

exports[`no-unnecessary-fetch-options > invalid(47): fetch('/', {\n\tmethod: 'GET',\n\tcredentials: 'same-origin',\n}); 1`] = `

  1 | fetch('/', {
  2 | 	method: 'GET',
  3 | 	credentials: 'same-origin',
  4 | });

`;

exports[`no-unnecessary-fetch-options > invalid(47): fetch('/', {\n\tmethod: 'GET',\n\tcredentials: 'same-origin',\n}); 2`] = `

Message:
  1 | fetch('/', {
> 2 | 	method: 'GET',
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.
  3 | 	credentials: 'same-origin',
  4 | });

Output:
  1 | fetch('/');

`;

exports[`no-unnecessary-fetch-options > invalid(47): fetch('/', {\n\tmethod: 'GET',\n\tcredentials: 'same-origin',\n}); 3`] = `

Message:
  1 | fetch('/', {
  2 | 	method: 'GET',
> 3 | 	credentials: 'same-origin',
    | 	^^^^^^^^^^^ Remove unnecessary \`credentials\` fetch option.
  4 | });

Output:
  1 | fetch('/', {
  2 | 	method: 'GET',
  3 | });

`;

exports[`no-unnecessary-fetch-options > invalid(48): fetch('/', {\n\t// Keep this comment.\n\tmethod: 'GET',\n}); 1`] = `

  1 | fetch('/', {
  2 | 	// Keep this comment.
  3 | 	method: 'GET',
  4 | });

`;

exports[`no-unnecessary-fetch-options > invalid(48): fetch('/', {\n\t// Keep this comment.\n\tmethod: 'GET',\n}); 2`] = `

Message:
  1 | fetch('/', {
  2 | 	// Keep this comment.
> 3 | 	method: 'GET',
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.
  4 | });

`;

exports[`no-unnecessary-fetch-options > invalid(49): fetch('/', {\n\tmethod: /* keep */ 'GET',\n}); 1`] = `

  1 | fetch('/', {
  2 | 	method: /* keep */ 'GET',
  3 | });

`;

exports[`no-unnecessary-fetch-options > invalid(49): fetch('/', {\n\tmethod: /* keep */ 'GET',\n}); 2`] = `

Message:
  1 | fetch('/', {
> 2 | 	method: /* keep */ 'GET',
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.
  3 | });

`;

exports[`no-unnecessary-fetch-options > invalid(5): fetch(\"/\", {body: (null as null)}) 1`] = `

  1 | fetch("/", {body: (null as null)})

`;

exports[`no-unnecessary-fetch-options > invalid(5): fetch(\"/\", {body: (null as null)}) 2`] = `

Message:
> 1 | fetch("/", {body: (null as null)})
    |             ^^^^ Remove unnecessary \`body\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(5): new Request(\"https://example.com\", {method: \"GET\"}) 1`] = `

  1 | new Request("https://example.com", {method: "GET"})

`;

exports[`no-unnecessary-fetch-options > invalid(5): new Request(\"https://example.com\", {method: \"GET\"}) 2`] = `

Message:
> 1 | new Request("https://example.com", {method: "GET"})
    |                                     ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | new Request("https://example.com")

`;

exports[`no-unnecessary-fetch-options > invalid(50): fetch('/', {\n\tmethod: 'GET', // Keep this comment.\n\theaders: {\n\t\taccept: 'application/json',\n\t},\n}); 1`] = `

  1 | fetch('/', {
  2 | 	method: 'GET', // Keep this comment.
  3 | 	headers: {
  4 | 		accept: 'application/json',
  5 | 	},
  6 | });

`;

exports[`no-unnecessary-fetch-options > invalid(50): fetch('/', {\n\tmethod: 'GET', // Keep this comment.\n\theaders: {\n\t\taccept: 'application/json',\n\t},\n}); 2`] = `

Message:
  1 | fetch('/', {
> 2 | 	method: 'GET', // Keep this comment.
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.
  3 | 	headers: {
  4 | 		accept: 'application/json',
  5 | 	},
  6 | });

`;

exports[`no-unnecessary-fetch-options > invalid(51): fetch(\"/\", {method: (sideEffect(), \"GET\")}) 1`] = `

  1 | fetch("/", {method: (sideEffect(), "GET")})

`;

exports[`no-unnecessary-fetch-options > invalid(51): fetch(\"/\", {method: (sideEffect(), \"GET\")}) 2`] = `

Message:
> 1 | fetch("/", {method: (sideEffect(), "GET")})
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(52): fetch(url, {method: void sideEffect()}) 1`] = `

  1 | fetch(url, {method: void sideEffect()})

`;

exports[`no-unnecessary-fetch-options > invalid(52): fetch(url, {method: void sideEffect()}) 2`] = `

Message:
> 1 | fetch(url, {method: void sideEffect()})
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(53): fetch(url, {body: (sideEffect(), null)}) 1`] = `

  1 | fetch(url, {body: (sideEffect(), null)})

`;

exports[`no-unnecessary-fetch-options > invalid(53): fetch(url, {body: (sideEffect(), null)}) 2`] = `

Message:
> 1 | fetch(url, {body: (sideEffect(), null)})
    |             ^^^^ Remove unnecessary \`body\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(54): fetch(\"/\", {[(sideEffect(), \"method\")]: \"GET\"}) 1`] = `

  1 | fetch("/", {[(sideEffect(), "method")]: "GET"})

`;

exports[`no-unnecessary-fetch-options > invalid(54): fetch(\"/\", {[(sideEffect(), \"method\")]: \"GET\"}) 2`] = `

Message:
> 1 | fetch("/", {[(sideEffect(), "method")]: "GET"})
    |               ^^^^^^^^^^^^^^^^^^^^^^ Remove unnecessary \`method\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(55): fetch(\"/\", {[method]: \"GET\"}); const method = \"method\"; 1`] = `

  1 | fetch("/", {[method]: "GET"}); const method = "method";

`;

exports[`no-unnecessary-fetch-options > invalid(55): fetch(\"/\", {[method]: \"GET\"}); const method = \"method\"; 2`] = `

Message:
> 1 | fetch("/", {[method]: "GET"}); const method = "method";
    |              ^^^^^^ Remove unnecessary \`method\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(56): declare const url: string; fetch(url, {method: \"GET\"}); 1`] = `

Filename: file.ts

  1 | declare const url: string; fetch(url, {method: "GET"});

`;

exports[`no-unnecessary-fetch-options > invalid(56): declare const url: string; fetch(url, {method: \"GET\"}); 2`] = `

Message:
> 1 | declare const url: string; fetch(url, {method: "GET"});
    |                                        ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | declare const url: string; fetch(url);

`;

exports[`no-unnecessary-fetch-options > invalid(57): declare const url: string; new Request(url, {method: \"GET\"}); 1`] = `

Filename: file.ts

  1 | declare const url: string; new Request(url, {method: "GET"});

`;

exports[`no-unnecessary-fetch-options > invalid(57): declare const url: string; new Request(url, {method: \"GET\"}); 2`] = `

Message:
> 1 | declare const url: string; new Request(url, {method: "GET"});
    |                                              ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | declare const url: string; new Request(url);

`;

exports[`no-unnecessary-fetch-options > invalid(58): declare const url: URL; fetch(url, {headers: {}}); 1`] = `

Filename: file.ts

  1 | declare const url: URL; fetch(url, {headers: {}});

`;

exports[`no-unnecessary-fetch-options > invalid(58): declare const url: URL; fetch(url, {headers: {}}); 2`] = `

Message:
> 1 | declare const url: URL; fetch(url, {headers: {}});
    |                                     ^^^^^^^ Remove unnecessary \`headers\` fetch option.

Output:
  1 | declare const url: URL; fetch(url);

`;

exports[`no-unnecessary-fetch-options > invalid(59): declare const url: string | URL; fetch(url, {method: \"GET\"}); 1`] = `

Filename: file.ts

  1 | declare const url: string | URL; fetch(url, {method: "GET"});

`;

exports[`no-unnecessary-fetch-options > invalid(59): declare const url: string | URL; fetch(url, {method: \"GET\"}); 2`] = `

Message:
> 1 | declare const url: string | URL; fetch(url, {method: "GET"});
    |                                              ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | declare const url: string | URL; fetch(url);

`;

exports[`no-unnecessary-fetch-options > invalid(6): fetch(\"/\", ({} as const)) 1`] = `

  1 | fetch("/", ({} as const))

`;

exports[`no-unnecessary-fetch-options > invalid(6): fetch(\"/\", ({} as const)) 2`] = `

Message:
> 1 | fetch("/", ({} as const))
    |             ^^ Remove unnecessary empty fetch options.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(6): fetch(\`https://example.com\`, {method: \"get\"}) 1`] = `

  1 | fetch(\`https://example.com\`, {method: "get"})

`;

exports[`no-unnecessary-fetch-options > invalid(6): fetch(\`https://example.com\`, {method: \"get\"}) 2`] = `

Message:
> 1 | fetch(\`https://example.com\`, {method: "get"})
    |                               ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch(\`https://example.com\`)

`;

exports[`no-unnecessary-fetch-options > invalid(60): function foo<T extends string>(url: T) { fetch(url, {method: \"GET\"}); } 1`] = `

Filename: file.ts

  1 | function foo<T extends string>(url: T) { fetch(url, {method: "GET"}); }

`;

exports[`no-unnecessary-fetch-options > invalid(60): function foo<T extends string>(url: T) { fetch(url, {method: \"GET\"}); } 2`] = `

Message:
> 1 | function foo<T extends string>(url: T) { fetch(url, {method: "GET"}); }
    |                                                      ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | function foo<T extends string>(url: T) { fetch(url); }

`;

exports[`no-unnecessary-fetch-options > invalid(61): declare const url: \"/api\"; fetch(url, {method: \"GET\"}); 1`] = `

Filename: file.ts

  1 | declare const url: "/api"; fetch(url, {method: "GET"});

`;

exports[`no-unnecessary-fetch-options > invalid(61): declare const url: \"/api\"; fetch(url, {method: \"GET\"}); 2`] = `

Message:
> 1 | declare const url: "/api"; fetch(url, {method: "GET"});
    |                                        ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | declare const url: "/api"; fetch(url);

`;

exports[`no-unnecessary-fetch-options > invalid(62): fetch(\"/\", {body: void [, later]}); const later = 1; 1`] = `

  1 | fetch("/", {body: void [, later]}); const later = 1;

`;

exports[`no-unnecessary-fetch-options > invalid(62): fetch(\"/\", {body: void [, later]}); const later = 1; 2`] = `

Message:
> 1 | fetch("/", {body: void [, later]}); const later = 1;
    |             ^^^^ Remove unnecessary \`body\` fetch option.

`;

exports[`no-unnecessary-fetch-options > invalid(63): fetch('/', {\n\tmethod:\n\t\t'GET',\n\tbody,\n}); 1`] = `

  1 | fetch('/', {
  2 | 	method:
  3 | 		'GET',
  4 | 	body,
  5 | });

`;

exports[`no-unnecessary-fetch-options > invalid(63): fetch('/', {\n\tmethod:\n\t\t'GET',\n\tbody,\n}); 2`] = `

Message:
  1 | fetch('/', {
> 2 | 	method:
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.
  3 | 		'GET',
  4 | 	body,
  5 | });

Output:
  1 | fetch('/', {
  2 | 	
  3 | 		
  4 | 	body,
  5 | });

`;

exports[`no-unnecessary-fetch-options > invalid(64): fetch('/', {\n\tmethod: 'GET'\n\t, body,\n}); 1`] = `

  1 | fetch('/', {
  2 | 	method: 'GET'
  3 | 	, body,
  4 | });

`;

exports[`no-unnecessary-fetch-options > invalid(64): fetch('/', {\n\tmethod: 'GET'\n\t, body,\n}); 2`] = `

Message:
  1 | fetch('/', {
> 2 | 	method: 'GET'
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.
  3 | 	, body,
  4 | });

Output:
  1 | fetch('/', {
  2 | 	 
  3 | 	 body,
  4 | });

`;

exports[`no-unnecessary-fetch-options > invalid(65): fetch('/', {\n\tmethod: 'GET', body,\n}); 1`] = `

  1 | fetch('/', {
  2 | 	method: 'GET', body,
  3 | });

`;

exports[`no-unnecessary-fetch-options > invalid(65): fetch('/', {\n\tmethod: 'GET', body,\n}); 2`] = `

Message:
  1 | fetch('/', {
> 2 | 	method: 'GET', body,
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.
  3 | });

Output:
  1 | fetch('/', {
  2 | 	body,
  3 | });

`;

exports[`no-unnecessary-fetch-options > invalid(66): fetch('/', {\n\tbody,\n\tmethod: 'GET'\n}); 1`] = `

  1 | fetch('/', {
  2 | 	body,
  3 | 	method: 'GET'
  4 | });

`;

exports[`no-unnecessary-fetch-options > invalid(66): fetch('/', {\n\tbody,\n\tmethod: 'GET'\n}); 2`] = `

Message:
  1 | fetch('/', {
  2 | 	body,
> 3 | 	method: 'GET'
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.
  4 | });

Output:
  1 | fetch('/', {
  2 | 	body,
  3 | });

`;

exports[`no-unnecessary-fetch-options > invalid(67): fetch('/', {body,\n\tmethod: 'GET'}); 1`] = `

  1 | fetch('/', {body,
  2 | 	method: 'GET'});

`;

exports[`no-unnecessary-fetch-options > invalid(67): fetch('/', {body,\n\tmethod: 'GET'}); 2`] = `

Message:
  1 | fetch('/', {body,
> 2 | 	method: 'GET'});
    | 	^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch('/', {body
  2 | 	 });

`;

exports[`no-unnecessary-fetch-options > invalid(68): fetch(\"/\", {body, method: \"GET\",}) 1`] = `

  1 | fetch("/", {body, method: "GET",})

`;

exports[`no-unnecessary-fetch-options > invalid(68): fetch(\"/\", {body, method: \"GET\",}) 2`] = `

Message:
> 1 | fetch("/", {body, method: "GET",})
    |                   ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/", {body})

`;

exports[`no-unnecessary-fetch-options > invalid(69): fetch('/', {body, method: 'GET'\n}); 1`] = `

  1 | fetch('/', {body, method: 'GET'
  2 | });

`;

exports[`no-unnecessary-fetch-options > invalid(69): fetch('/', {body, method: 'GET'\n}); 2`] = `

Message:
> 1 | fetch('/', {body, method: 'GET'
    |                   ^^^^^^ Remove unnecessary \`method\` fetch option.
  2 | });

Output:
  1 | fetch('/', {body
  2 | });

`;

exports[`no-unnecessary-fetch-options > invalid(7): fetch(new URL(url), {method: \"Get\"}) 1`] = `

  1 | fetch(new URL(url), {method: "Get"})

`;

exports[`no-unnecessary-fetch-options > invalid(7): fetch(new URL(url), {method: \"Get\"}) 2`] = `

Message:
> 1 | fetch(new URL(url), {method: "Get"})
    |                      ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch(new URL(url))

`;

exports[`no-unnecessary-fetch-options > invalid(7): new Request(\"/\", ({} as const)) 1`] = `

  1 | new Request("/", ({} as const))

`;

exports[`no-unnecessary-fetch-options > invalid(7): new Request(\"/\", ({} as const)) 2`] = `

Message:
> 1 | new Request("/", ({} as const))
    |                   ^^ Remove unnecessary empty fetch options.

Output:
  1 | new Request("/")

`;

exports[`no-unnecessary-fetch-options > invalid(8): const method = \"GET\"; fetch(\"/\", {method}) 1`] = `

  1 | const method = "GET"; fetch("/", {method})

`;

exports[`no-unnecessary-fetch-options > invalid(8): const method = \"GET\"; fetch(\"/\", {method}) 2`] = `

Message:
> 1 | const method = "GET"; fetch("/", {method})
    |                                   ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | const method = "GET"; fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(8): fetch(\"/\", ({method: \"GET\"} as const)) 1`] = `

  1 | fetch("/", ({method: "GET"} as const))

`;

exports[`no-unnecessary-fetch-options > invalid(8): fetch(\"/\", ({method: \"GET\"} as const)) 2`] = `

Message:
> 1 | fetch("/", ({method: "GET"} as const))
    |              ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(9): fetch(\"/\", ({method: \"GET\"} satisfies RequestInit)) 1`] = `

  1 | fetch("/", ({method: "GET"} satisfies RequestInit))

`;

exports[`no-unnecessary-fetch-options > invalid(9): fetch(\"/\", ({method: \"GET\"} satisfies RequestInit)) 2`] = `

Message:
> 1 | fetch("/", ({method: "GET"} satisfies RequestInit))
    |              ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/")

`;

exports[`no-unnecessary-fetch-options > invalid(9): fetch(\"/\", {method: \`GET\`}) 1`] = `

  1 | fetch("/", {method: \`GET\`})

`;

exports[`no-unnecessary-fetch-options > invalid(9): fetch(\"/\", {method: \`GET\`}) 2`] = `

Message:
> 1 | fetch("/", {method: \`GET\`})
    |             ^^^^^^ Remove unnecessary \`method\` fetch option.

Output:
  1 | fetch("/")

`;
